# clawgic

./: .gitignore  Cargo.toml  README.md  todo.txt  udo pacman -S jdk17-openjdk
clawgic/: Cargo.toml
clawgic/src/: expression_tree.rs  lib.rs  operator_notation.rs  prelude.rs
clawgic/src/expression_tree/: expression_var.rs  node.rs  shell.rs  universe.rs
clawgic/src/expression_tree/node/: negation.rs  operator.rs  sentence.rs
clawgic_tests/: Cargo.toml
clawgic_tests/src/: expression_tree_tests.rs  expression_var_tests.rs  main.rs  node_tests.rs
src/: expression_tree.rs  lib.rs  operator_notation.rs  prelude.rs  utils.rs
src/expression_tree/: expression_var.rs  node.rs  shell.rs  token.rs  universe.rs
src/expression_tree/node/: negation.rs  operator.rs  sentence.rs
src/tests/: expression_tree_tests.rs  expression_var_tests.rs  mod.rs  node_tests.rs
